Implemented breath search without Reservation